--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.574.0",
+    "moment": "^2.30.1",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "pg": "^8.19.0",
